# pytrade

./: alembic.ini  bank.ipynb  cheetsheet_run.ipynb  docker-compose.yaml  pyproject.toml  requirements.txt
backend/: Dockerfile  alembic.ini  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
backend/pytrade/: __init__.py  models.py  repositories.py
backend/scripts/: autogen_migrations.sh
docs/: code_signal_bank.md  interview.md  kubernetes.md  kubernetes_book.md  project.md
docs/amazon/: ds.md  java_adt.md
docs/databases/: database.md
docs/geico/: behivoral.md  dynamic_programming.md  gieco_instructions.md  interview.md  interview_method.md  java.md  java_ds.md  logic.md  psuedo_code.md  relaiable_distributed_system.md  richer.md  sre.md  system_at_scale.md  system_design.md  system_design_book.md  tree.md
docs/go/: channels.md  concurrency.md  errors.md  go_by_example.md  go_site.md  http.md  io.md  libraries.md  packaging_app.md  pike.md  presentation.md  testing.md  wait_group.md
docs/job_interview_ds/: algorithm.md  algorithm_short.md  code_signal.md  interview.md  practice.py  python.md
docs/job_interview_general/: akamai.md  giecko.md  gorking_data_structure.md  influxdb.md  linode.md  nail_the_coding_interview.md  questions_to_ask_during_interview.md  wayne.md
docs/job_interview_system/: behivoral_interview.md  byte_byte_go.md  design_process.md  latency.md  system_design.md
docs/kubernetes/: advanced_scheduling.md  ckad.md  ckad2.md  ckad3.md  debug.md  (+12 more)
notebooks/: ib_basic.ipynb  python_code.ipynb
tests/: test_pytrade.py
(+110 files in other folders)
