[tool.poetry]
name = "pytrade"
version = "0.1.0"
description = ""
authors = ["tmeshorer <tmeshorer@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.mypy]
ignore_missing_imports = true
namespace_packages = true
mypy_path = "./app"

[tool.isort]
known_first_party = "app"

# This is to make isort compatible with Black. See
# https://black.readthedocs.io/en/stable/the_black_code_style.html#how-black-wraps-lines.
line_length=120
multi_line_output=3
include_trailing_comma = true
force_grid_wrap=0
use_parentheses = true